--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,223 @@
-.App {
-  text-align: center;
+.header {
+position: absolute;
+width: 400px;
+height: 49px;
+left: 165px;
+top: 70px;
+
+font-family: 'Georgia';
+font-style: normal;
+font-weight: 700;
+font-size: 48px;
+line-height: 49px;
+
+
+color: rgba(0, 0, 0, 0.87);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.header-category {
+  position: absolute;
+  width: 400px;
+  height: 49px;
+  left: 165px;
+  top:1200px;
+  
+  font-family: 'Georgia';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 49px;
+  
+  
+  color: rgba(0, 0, 0, 0.87);
   }
+
+.container {
+  width: 90%;
+  max-width: 1240px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  grid-gap: 20px;
+  padding-left: 12%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+@media only screen and (min-width: 500px){
+  .container {
+      grid-template-columns: 1fr 1fr;
+  }
+  .item-1 {
+      grid-column: 1 / span 2;
+  }
+
+}
+
+@media only screen and (min-width: 850px){
+  .container{
+      grid-template-columns: repeat(4,1fr);
+  }
+
+}
+.card {
+  min-height: 100%;
+  background: rgba(9, 53, 123, 0.9);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.87);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  text-decoration: none;
+  position: relative;
+  top: 120px;
+  transition: all .1s ease-in;
+}
+
+.card .thumb {
+  width: 100%;
+  background-size: cover;
+  background-position: center center;
+}
+
+.card p {
+  flex: 1;
+  line-height: 1.4;
   color: white;
+  font-size: 15px;
+}
+.card h1 {
+  flex: 1;
+  line-height: 1;
+  font-size: 20px;
+  margin: 1em 0 0 0;
+  color:white;
+  letter-spacing: .05em;
 }
 
-.App-link {
-  color: #61dafb;
+.loading-icon {
+  padding-left: 50%;
+  padding-top: 300px;
+}
+/* .Card1 {
+  position: absolute;
+  width: 400px;
+  height: 423px;
+  padding-left: 7em;
+  top: 249px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.card-container1 {
+left: 0%;
+right: 0%;
+top: 30.04%;
+bottom: 0%;
+background: rgba(9, 53, 123, 0.9);
+color:white;
 }
+
+.Card2 {
+  position: absolute;
+  width: 200px;
+height: 150px;
+left: 635px;
+top: 209px;
+}
+.card-container2 {
+  position: relative;
+left: 0%;
+right: 0%;
+top: 30%;
+bottom: 0%;
+color:white;
+background: rgba(9, 53, 123, 0.9);
+
+}
+
+.Card3 {
+  position: absolute;
+width: 200px;
+height: 150px;
+left: 870px;
+top: 209px;
+}
+
+.card-container3 {
+  position: relative;
+left: 0%;
+right: 0%;
+top: 30%;
+bottom: 0%;
+color:white;
+background: rgba(9, 53, 123, 0.9);
+}
+
+.Card4 {
+  position: absolute;
+width: 200px;
+height: 150px;
+left: 635px;
+top: 634px;
+color:white;
+background: rgba(9, 53, 123, 0.9);
+}
+
+.Card5 {
+  position: absolute;
+width: 200px;
+height: 150px;
+left: 870px;
+top: 634px;
+color:white;
+background: rgba(9, 53, 123, 0.9);
+}
+
+.Card6 {
+  position: absolute;
+width: 250px;
+height: 350px;
+left: 165px;
+top: 800px;
+}
+
+.card-container6 {
+  position: relative;
+left: 0%;
+right: 0%;
+top: 30%;
+bottom: 0%;
+color:white;
+background: rgba(9, 53, 123, 0.9);
+}
+.Card7 {
+  position: absolute;
+width: 250px;
+height: 350px;
+left: 490px;
+top: 800px;
+cursor: pointer;
+}
+
+.card-container7 {
+  position: relative;
+left: 0%;
+right: 0%;
+top: 30%;
+bottom: 0%;
+color:white;
+background: rgba(9, 53, 123, 0.9);
+}
+.Card8 {
+  position: absolute;
+width: 250px;
+height: 350px;
+left: 820px;
+top: 800px;
+}
+
+.card-container8 {
+  position: relative;
+left: 0%;
+right: 0%;
+top: 30%;
+bottom: 0%;
+color:white;
+background: rgba(9, 53, 123, 0.9);
+} */
